--- a/Centros.html
+++ b/Centros.html
@@ -77,12 +77,8 @@
 										'<li><i class="fa fa-clock-o" aria-hidden="true"></i>' + objCentro.records[i].horario + '</li>' +
 										'<li><span class="fa fa-map-marker"></span>' + objCentro.records[i].direccion + '</li>' +
 										'<li><br></li>' +
-										'<li><span class="fa fa-road"></span>' + objCentro.records[i].acceso + '<ul>' +
-										'<li>Bus: 60, H4, V15, bus barrio 124</li>' +
-										'<li>Metro: Vall dHebron + bus / Metro: Penitents + bus 124 < /li>' +
-										'<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>' +
+										'<li><span class="fa fa-road"></span>' + objCentro.records[i].acceso + '<li>' +
 									'</ul>' +
-
 								'</div>' +
 								'<div class="text-center">' +
 									'<a href="#" class="btn bg-custom text-light">Más Información</a>' +
